# ccanvas

./: Cargo.toml  README.md
design/: book.toml
design/src/: SUMMARY.md  connection.md  instance.md  module.md  motivation.md  packets.md  subscription.md
design/src/operations/: connect.md  message.md
design/src/packets/: apprconn.md  msg.md  rejconn.md  reqconn.md  sub.md  subbed.md  unsub.md
design/src/threads/: connection.md  input.md  message.md  processor.md  render.md
src/: lib.rs  main.rs  values.rs
src/components/: connection.rs  instance.rs  mod.rs  subscription.rs
src/structs/component/: discriminator.rs  passes.rs  process.rs  space.rs  subscription.rs
src/structs/data/: pool.rs
src/structs/events/: event.rs  mod.rs  suppressor.rs
src/structs/requests/: render_request.rs  request.rs  requestcontent.rs
src/structs/responses/: event_serde.rs  response.rs  response_error.rs  response_success.rs
src/term/: commands.rs  enter.rs  exit.rs  mod.rs
src/threads/: connection.rs  message.rs  mod.rs  processor.rs
src/traits/: component.rs
