[package]
name = "ccanvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "sync", "fs", "process" ]}
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
termion = "2"
async-trait = "0.1"
nix = { version = "0.27", features = [ "signal" ] }
libc = "0.2"

log = { version = "0.4", optional = true}
simplelog = { version = "0.12", optional = true}
dirs = { version = "5.0", optional = true }

[features]
default = []
log = ["dep:log", "dep:simplelog", "dep:dirs"]

[profile.release]
strip = true
lto = true
opt-level = 3
panic = "abort"
